--- a/src/style.scss
+++ b/src/style.scss
@@ -22,3 +22,41 @@ $secondary-color: #ffff00;
   z-index: 0;
   outline: none;
 }
+
+.crosshair {
+  position: absolute;
+
+  width: 10px;
+  height: 10px;
+  background-color: white;
+  border-radius: 50%;
+  opacity: 0.9;
+
+  //Center div (>-<)
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#blocker {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#instructions {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  text-align: center;
+  font-size: 14px;
+  cursor: pointer;
+
+  color: #fff;
+}
