--- a/src/style.scss
+++ b/src/style.scss
@@ -42,7 +42,7 @@ $secondary-color: #ffff00;
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  // background-color: rgba(0, 0, 0, 0.5);
 }
 
 #instructions {
