--- a/src/style.scss
+++ b/src/style.scss
@@ -43,7 +43,7 @@ $secondary-color: #ffff00;
   width: 50vw;
   height: 50vh;
 
-  background-color: white;
+  background-color: yellow;
   opacity: 0.5;
 
   left: 0;
